# FindReplace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ifstream_iterator.h  mmap_iterator.h
src/: ifstream_iterator.cpp  main.cpp  mmap.cpp  mmap_iterator.cpp
